--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  position: relative; 
+  overflow: hidden; 
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  position: relative; 
+  z-index: 1; 
 }
 
-.App-link {
-  color: #61dafb;
+.scrolling-text-container {
+  overflow: hidden;
+  width: 100%;
+  padding: 20px 0;
+  z-index: 2; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.scrolling-line {
+  height: 2px;
+  background-color: black;
+  width: 100%;
+  margin: 10px 0;
+}
+
+.scrolling-text {
+  font-size: 48px;
+  font-weight: bold;
+  white-space: nowrap;
+  text-transform: uppercase;
+  animation: scroll-left 20s linear infinite;
+  color: black;
+  z-index: 2; 
+}
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(100%);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: translateX(-100%);
   }
+}
+
+.container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 100vh;
+}
+
+.background-video {
+  position: absolute; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1; 
 }
