--- a/src/Home.css
+++ b/src/Home.css
@@ -1,48 +1,74 @@
+
 .App {
     text-align: center;
+    height: 100vh; 
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    flex-direction: column; 
   }
   
   .App-header {
     position: relative;
-    height: 100vh;
+    width: 100%;
+    height: 100%; 
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
   }
   
-  .scrolling-text-container {
-    position: relative;
-    margin-bottom: 20px;
-  }
-  
-  .scrolling-text {
-    white-space: nowrap;
-    overflow: hidden;
-    animation: scroll 10s linear infinite;
-  }
-  
-  .scrolling-line {
-    height: 2px;
-    background: #fff;
-    margin: 10px 0;
-  }
-  
+  /* Videon */
   .background-video {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+    z-index: -1; 
   }
   
   .address {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  color: white;
-  font-size: 24px; 
-  font-family: Arial, sans-serif;
-  padding: 5px;
-}
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    color: white;
+    font-size: 5vw; 
+    font-family: Arial, sans-serif;
+    padding: 10px;
+    text-align: left; 
+    z-index: 10; 
+  }
+  
+
+  @media (max-width: 600px) {
+    .address {
+      font-size: 8vw;
+      bottom: 10px; 
+      left: 10px;  
+    }
+  
+    .background-video {
+      height: auto; 
+    }
+  }
+  
+
+  @media (max-width: 900px) {
+    .address {
+      font-size: 6vw; 
+    }
+  
+    .background-video {
+      height: 80%; 
+    }
+  }
+  
+
+  @media (min-width: 1200px) {
+    .address {
+      font-size: 2vw; 
+    }
+  }
+  
